add the checkCommand for check_iostats
should work fine with this plugin https://github.com/dnsmichi/icinga-plugins/blob/master/scripts/check_iostats
that give more information than check_iostat

--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -147,3 +147,44 @@ object CheckCommand "iostat" {
 	vars.iostat_cread = 200
 	vars.iostat_cwrite = 200
 }
+
+object CheckCommand "iostats" {
+        import "plugin-check-command"
+        command = [ PluginContribDir + "/check_iostats" ]
+        arguments = {
+                "-d" = {
+                        value = "$iostat_disk$"
+                        description = "Device to check without path. e.g. sda"
+                }
+                "-w" = {
+                        value ="$iostat_wtps$,$iostat_wread$,$iostat_wwrite$"
+                        description = "Sets the WARNING level for tps, KB_read/s and KB_written/s, respectively"
+                }
+                "-c" = {
+                        value ="$iostat_ctps$,$iostat_cread$,$iostat_cwrite$"
+                        description = "Sets the CRITICAL level for tps, KB_read/s and KB_written/s, respectively"
+                }
+                "-W" = {
+                        value ="$iostat_wavgwait$"
+                        description = "Sets the WARNING level for iowait"
+                }
+
+                "-C" = {
+                        value ="$iostat_cavgwait$"
+                        description = "Sets the CRITICAL level for iowait"
+                }
+        }
+
+        vars.iostat_disk = "sda"
+        vars.iostat_wtps = 3000
+        vars.iostat_wread = 50000
+        vars.iostat_wwrite = 10000
+        vars.iostat_wavgwait = 50
+        vars.iostat_ctps = 5000
+        vars.iostat_cread = 80000
+        vars.iostat_cwrite = 25000
+        vars.iostat_cavgwait = 80
+   
+   
+}
+
