--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -153,37 +153,37 @@ object CheckCommand "iostats" {
         command = [ PluginContribDir + "/check_iostats" ]
         arguments = {
                 "-d" = {
-                        value = "$iostat_disk$"
+                        value = "$iostats_disk$"
                         description = "Device to check without path. e.g. sda"
                 }
                 "-w" = {
-                        value ="$iostat_wtps$,$iostat_wread$,$iostat_wwrite$"
+                        value ="$iostats_wtps$,$iostats_wread$,$iostats_wwrite$"
                         description = "Sets the WARNING level for tps, KB_read/s and KB_written/s, respectively"
                 }
                 "-c" = {
-                        value ="$iostat_ctps$,$iostat_cread$,$iostat_cwrite$"
+                        value ="$iostats_ctps$,$iostats_cread$,$iostats_cwrite$"
                         description = "Sets the CRITICAL level for tps, KB_read/s and KB_written/s, respectively"
                 }
                 "-W" = {
-                        value ="$iostat_wavgwait$"
+                        value ="$iostats_wavgwait$"
                         description = "Sets the WARNING level for iowait"
                 }
 
                 "-C" = {
-                        value ="$iostat_cavgwait$"
+                        value ="$iostats_cavgwait$"
                         description = "Sets the CRITICAL level for iowait"
                 }
         }
 
-        vars.iostat_disk = "sda"
-        vars.iostat_wtps = 3000
-        vars.iostat_wread = 50000
-        vars.iostat_wwrite = 10000
-        vars.iostat_wavgwait = 50
-        vars.iostat_ctps = 5000
-        vars.iostat_cread = 80000
-        vars.iostat_cwrite = 25000
-        vars.iostat_cavgwait = 80
+        vars.iostats_disk = "sda"
+        vars.iostats_wtps = 3000
+        vars.iostats_wread = 50000
+        vars.iostats_wwrite = 10000
+        vars.iostats_wavgwait = 50
+        vars.iostats_ctps = 5000
+        vars.iostats_cread = 80000
+        vars.iostats_cwrite = 25000
+        vars.iostats_cavgwait = 80
    
    
 }
