corrections for iostats

--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -157,34 +157,31 @@ object CheckCommand "iostats" {
                         description = "Device to check without path. e.g. sda"
                 }
                 "-w" = {
-                        value ="$iostats_wtps$,$iostats_wread$,$iostats_wwrite$"
+                        value ="$iostats_warning_tps$,$iostats_warning_read$,$iostats_warning_write$"
                         description = "Sets the WARNING level for tps, KB_read/s and KB_written/s, respectively"
                 }
                 "-c" = {
-                        value ="$iostats_ctps$,$iostats_cread$,$iostats_cwrite$"
+                        value ="$iostats_critical_tps$,$iostats_critical_read$,$iostats_critical_write$"
                         description = "Sets the CRITICAL level for tps, KB_read/s and KB_written/s, respectively"
                 }
                 "-W" = {
-                        value ="$iostats_wavgwait$"
+                        value ="$iostats_warning_wait$"
                         description = "Sets the WARNING level for iowait"
                 }
 
                 "-C" = {
-                        value ="$iostats_cavgwait$"
+                        value ="$iostats_critical_wait$"
                         description = "Sets the CRITICAL level for iowait"
                 }
         }
 
         vars.iostats_disk = "sda"
-        vars.iostats_wtps = 3000
-        vars.iostats_wread = 50000
-        vars.iostats_wwrite = 10000
-        vars.iostats_wavgwait = 50
-        vars.iostats_ctps = 5000
-        vars.iostats_cread = 80000
-        vars.iostats_cwrite = 25000
-        vars.iostats_cavgwait = 80
-   
-   
+        vars.iostats_warning_tps = 3000
+        vars.iostats_warning_read = 50000
+        vars.iostats_warning_write = 10000
+        vars.iostats_warning_wait = 50
+        vars.iostats_critical_tps = 5000
+        vars.iostats_critical_read = 80000
+        vars.iostats_critical_write = 25000
+        vars.iostats_critical_wait = 80
 }
-
