ITL: Fix problem with passing arguments to NSClient++
There was a problem with passing arguments to the NSClient++
which is fixed by changing the skip_key staement by the repeat_key
statement in the "-a" key of the dictionary. Further details can be
found in issue #12747 ITL - Problems passing arguments/parameters to
NSClient++

fixes #12747

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -36,7 +36,7 @@ object CheckCommand "nscp-local" {
 		}
 		"-a" = {
 			value = "$nscp_arguments$"
-			skip_key = true
+			repeat_key = true
 		}
 		"--show-all" = {
 			set_if = "$nscp_showall$"
@@ -66,7 +66,7 @@ object CheckCommand "nscp-local-cpu" {
 		}
 		"-a" = {
 			value = "$nscp_cpu_arguments$"
-			skip_key = true
+			repeat_key = true
 		}
 	}
 
@@ -97,7 +97,7 @@ object CheckCommand "nscp-local-memory" {
 		}
 		"-a" = {
 			value = "$nscp_memory_arguments$"
-			skip_key = true
+			repeat_key = true
 		}
 	}
 
@@ -112,7 +112,7 @@ object CheckCommand "nscp-local-memory" {
 		}
 	}}
 
-	vars.nscp_memory_commited = false
+	vars.nscp_memory_committed = false
 	vars.nscp_memory_physical = true
 	vars.nscp_memory_free = true
 	vars.nscp_memory_warning = {{
@@ -169,7 +169,7 @@ object CheckCommand "nscp-local-service" {
 		}
 		"-a" = {
 			value = "$nscp_service_arguments$"
-			skip_key = true
+			repeat_key = true
 		}
 	}
 
@@ -211,7 +211,7 @@ object CheckCommand "nscp-local-disk" {
 		}
 		"-a" = {
 			value = "$nscp_disk_arguments$"
-			skip_key = true
+			repeat_key = true
 		}
 	}
 
@@ -256,7 +256,7 @@ object CheckCommand "nscp-local-counter" {
 		}
 		"-a" = {
 			value = "$nscp_counter_arguments$"
-			skip_key = true
+			repeat_key = true
 		}
 	}
 
