Add radius CheckCommand.

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -2234,3 +2234,53 @@ object CheckCommand "mysql_query" {
 
 	vars.mysql_query_hostname = "$check_address$"
 }
+
+object CheckCommand "radius" {
+	import "plugin-check-command"
+
+	command = [
+		PluginDir + "/check_radius",
+	]
+
+	arguments = {
+		"-H" = "$radius_address$",
+		"-F" = "$radius_config_file$",
+		"-u" = "$radius_username$",
+		"-p" = "$radius_password$",
+		"-P" = {
+			value = "$radius_port$",
+		},
+		"-n" = {
+			value = "$radius_nas_id$",
+			description = "NAS identifier"
+		}
+		"-N" = {
+			value = "$radius_nas_address$",
+			description = "NAS IP Address"
+		},
+		"-e" = {
+			value = "$radius_expect$",
+			description = "Response string to expect from the server"
+		},
+		"-r" = {
+			value = "$radius_retries$",
+			description = "Number of times to retry a failed connection"
+		},
+		"-t" = {
+			value = "$radius_timeout$",
+			description = "Seconds before connection times out (default: 10) Optional :<timeout state> can be a state integer (0,1,2,3) or a state STRING"
+		},
+	}
+
+	vars.radius_address = {{
+		var addr_v4 = macro("$address$")
+		var addr_v6 = macro("$address6$")
+
+		if (addr_v4) {
+			return addr_v4
+		} else {
+			return addr_v6
+		}
+	}}
+
+}
