Upgrade NSClient++ to 0.5.0 stable
This involves required changes in the nscp-local ITL CheckCommand
definitions. Upgrading NSClient++ therefore requires updating
the Icinga 2 Windows client as well.

fixes #12733

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -27,6 +27,11 @@ object CheckCommand "nscp-local" {
 	arguments = {
 		"--log" = "$nscp_log_level$"
 		"--load-all" = { set_if ="$nscp_load_all$" }
+		"--module" = {
+			value = "$nscp_modules$"
+			description = "Specify which NSClient++ modules are required. 'nscp client' just needs 'CheckSystem' by default."
+			repeat_key = true
+		}
 		"-q" = {
 			value = "$nscp_query$"
 			required = true
@@ -45,9 +50,10 @@ object CheckCommand "nscp-local" {
 	}
 
 	vars.nscp_log_level = "critical"
-	vars.nscp_load_all = true
+	vars.nscp_load_all = false
 	vars.nscp_boot = true
 	vars.nscp_showall = false
+	vars.nscp_modules = [ "CheckSystem" ]
 }
 
 object CheckCommand "nscp-local-cpu" {
@@ -193,6 +199,7 @@ object CheckCommand "nscp-local-version" {
 	import  "nscp-local"
 
 	vars.nscp_query = "check_version"
+	vars.nscp_modules = [ "CheckHelpers" ]
 }
 
 object CheckCommand "nscp-local-disk" {
@@ -234,6 +241,8 @@ object CheckCommand "nscp-local-disk" {
 	vars.nscp_disk_critical = {{
 		if (!macro("$nscp_disk_free$")) { return 90 } else { return 10 }
 	}}
+
+	vars.nscp_modules = [ "CheckDisk" ]
 }
 
 object CheckCommand "nscp-local-counter" {
@@ -250,9 +259,8 @@ object CheckCommand "nscp-local-counter" {
 		"--critical" = {
 			value = "value $nscp_counter_op$ $nscp_counter_critical$"
 		}
-		"perf-syntax" = {
-			value = "perf-syntax=$nscp_counter_perfsyntax$"
-			skip_key = true
+		"--perf-syntax" = {
+			value = "$nscp_counter_perfsyntax$"
 		}
 		"-a" = {
 			value = "$nscp_counter_arguments$"
