ITL: Add timeout option for oracle_health CheckCommand
fixes #12739

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -392,6 +392,10 @@ object CheckCommand "oracle_health" {
 			set_if = "$oracle_health_noperfdata$"
 			description = "do not output performance data"
 		}
+		"--timeout" = {
+			value = "$oracle_health_timeout$"
+			description = "plugin timeout. Default is 60 seconds"
+		}
 	}
 
 	env = {
