--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -2237,6 +2237,7 @@ object CheckCommand "mysql_query" {
 
 object CheckCommand "radius" {
 	import "plugin-check-command"
+	import "ipv4-or-ipv6"
 
 	command = [
 		PluginDir + "/check_radius",
@@ -2272,15 +2273,5 @@ object CheckCommand "radius" {
 		},
 	}
 
-	vars.radius_address = {{
-		var addr_v4 = macro("$address$")
-		var addr_v6 = macro("$address6$")
-
-		if (addr_v4) {
-			return addr_v4
-		} else {
-			return addr_v6
-		}
-	}}
-
+	vars.radius_address = "$check_address$"
 }
