Update check_network in docs and itl
fixes #12155

--- a/itl/command-plugins-windows.conf
+++ b/itl/command-plugins-windows.conf
@@ -96,6 +96,10 @@ object CheckCommand "network-windows" {
 			value = "$network_win_crit$"
 			description = "Critical threshold"
 		}
+		"-n" = {
+			set_if = "$network_no_iastap$"
+			description = "Don't show isatap interfaces in output"
+		}
 	}
 }
 
