Spell ISATAP correctly and set noisatap in the ITL
refs #12155

--- a/itl/command-plugins-windows.conf
+++ b/itl/command-plugins-windows.conf
@@ -97,10 +97,11 @@ object CheckCommand "network-windows" {
 			description = "Critical threshold"
 		}
 		"-n" = {
-			set_if = "$network_no_iastap$"
-			description = "Don't show isatap interfaces in output"
+			set_if = "$network_no_isatap$"
+			description = "Don't show ISATAP interfaces in output"
 		}
 	}
+	vars.network_no_isatap = true
 }
 
 object CheckCommand "perfmon-windows" {
