Add missing '-m' (snmpv3_miblist) and -p (snmpv3_port) options
The options for setting an explicit MIB list and for specifying the target
port that are present for the snmp CheckCommand object that were missing from
the snmpv3 CheckCommand object are added with this patch.

fixes #12838

Signed-off-by: Gunnar Beutner <gunnar.beutner@icinga.com>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1343,6 +1343,10 @@ object CheckCommand "snmpv3" {
 				value = "$snmpv3_address$"
 				description = "Host name, IP Address, or unix socket (must be an absolute path)"
 		}
+		"-p" = {
+				value = "$snmpv3_port$"
+				description = "Port number"
+		}
 		"-n" = {
 				set_if = "$snmpv3_getnext$"
 				description = "Use SNMP GETNEXT instead of SNMP GET"
@@ -1406,6 +1410,10 @@ object CheckCommand "snmpv3" {
 		"-l" = {
 				value = "$snmpv3_label$"
 				description = "Prefix label for output from plugin"
+		}
+		"-m" = {
+			value = "$snmpv3_miblist$"
+			description = "List of SNMP MIBs for translating OIDs between numeric and textual representation"
 		}
 		"-u" = "$snmpv3_units$"
 		"--rate-multiplier" = "$snmpv3_rate_multiplier$"
