Fix incorrect default arguments for check_swap
fixes #12849

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1248,8 +1248,8 @@ object CheckCommand "swap" {
 		}
 	}
 
-	vars.swap_wfree = "50%"
-	vars.swap_cfree = "25%"
+	vars.swap_wfree = 50
+	vars.swap_cfree = 25
 	vars.swap_integer = false
 	vars.swap_allswaps = false
 }
