--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -15,28 +15,45 @@
 # along with this program; if not, write to the Free Software Foundation
 # Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
+add_executable ( check_nscp_api check_nscp_api.cpp  )
+target_link_libraries ( check_nscp_api ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_SYSTEM_LIBRARY} base remote )
+set_target_properties (
+  check_nscp_api PROPERTIES
+  INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR}/icinga2
+  DEFINE_SYMBOL I2_PLUGINS_BUILD
+  FOLDER Plugins )
+
+# Prefer the PluginDir constant which is set to /sbin on Windows
+
+if ( WIN32 )
+  install ( TARGETS check_nscp_api RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR} )
+else()
+  install ( TARGETS check_nscp_api RUNTIME DESTINATION ${ICINGA2_PLUGINDIR} )
+endif()
+
 if ( WIN32 )
 
   add_definitions ( -DUNICODE -D_UNICODE )
-  
+
   add_library ( thresholds thresholds )
     set_target_properties (
     thresholds PROPERTIES
     INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR}/icinga2
     FOLDER Plugins
   )
-  
-  list ( APPEND check_SOURCES 
-    check_disk.cpp check_load.cpp check_memory.cpp check_network.cpp check_perfmon.cpp check_ping.cpp
-    check_procs.cpp check_service.cpp check_swap.cpp check_update.cpp check_uptime.cpp check_users.cpp )
-  
-  foreach ( source ${check_SOURCES} ) 
+
+  list ( APPEND check_SOURCES
+    check_disk.cpp check_load.cpp check_memory.cpp check_network.cpp check_perfmon.cpp
+    check_ping.cpp check_procs.cpp check_service.cpp check_swap.cpp check_update.cpp check_uptime.cpp
+    check_users.cpp )
+
+  foreach ( source ${check_SOURCES} )
     string ( REGEX REPLACE ".cpp\$" "" check_OUT "${source}" )
     string ( REGEX REPLACE ".cpp\$" ".h" check_HEADER "${source}" )
-  
+
     add_executable ( ${check_OUT} ${source} ${check_HEADER} )
     target_link_libraries ( ${check_OUT} thresholds Shlwapi.lib ${Boost_PROGRAM_OPTIONS_LIBRARY} )
-    
+
     set_target_properties (
       ${check_OUT} PROPERTIES
       INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR}/icinga2
@@ -53,8 +70,8 @@ if ( WIN32 )
   target_link_libraries ( check_users wtsapi32.lib )
 
   install (
-    TARGETS check_disk check_load  check_memory check_network check_perfmon check_procs
+    TARGETS check_disk check_load check_memory check_network check_perfmon check_procs
       check_ping check_service check_swap check_update check_uptime check_users
-      RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR} )
+    RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR} )
 
 endif ( )
