ITL: Add timeout option for mysql_health CheckCommand

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -238,6 +238,10 @@ object CheckCommand "mysql_health" {
 			value = "$mysql_health_isvalidtime$"
 			description = "Signals the plugin to return OK if now is not a valid check time."
 		}
+		"--timeout" = {
+			value = "$mysql_health_timeout$"
+			description = "plugin timeout. Default is 60 seconds"
+		}
 	}
 
 	vars.mysql_health_hostname = "$check_address$"
