Add sudo option on check_mailq

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1984,6 +1984,10 @@ object CheckCommand "mailq" {
 			value = "$mailq_servertype$"
 			description = "[ sendmail | qmail | postfix | exim | nullmailer ] (default = autodetect)"
 		}
+		"-s" = {
+			set_if = "$mailq_sudo$"
+			description = "Use sudo for mailq command"
+		}
 	}
 }
 
