Add possibility to set verbose parameter for check_http

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -455,6 +455,10 @@ object CheckCommand "http" {
 			set_if = "$http_ipv6$"
 			description = "Use IPv6 connection"
 		}
+		"-v" = {
+			set_if = "$http_verbose$"
+			description = "Show details for command-line debugging"
+		}
 	}
 
 	vars.http_address = "$check_address$"
@@ -464,6 +468,7 @@ object CheckCommand "http" {
 	vars.http_invertregex = false
 	vars.check_ipv4 = "$http_ipv4$"
 	vars.check_ipv6 = "$http_ipv6$"
+	vars.http_verbose = false
 }
 
 object CheckCommand "ftp" {
