ITL: Update icingacli_businessprocess CheckCommand
fixes #4826

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/itl/plugins-contrib.d/icingacli.conf
+++ b/itl/plugins-contrib.d/icingacli.conf
@@ -24,7 +24,7 @@ template CheckCommand "icingacli" {
 object CheckCommand "icingacli-businessprocess" {
 	import "icingacli"
 
-	command += [ "businessprocess", "check", "process" ]
+	command += [ "businessprocess", "process", "check" ]
 
 	arguments = {
 		"--config" = {
@@ -33,15 +33,21 @@ object CheckCommand "icingacli-businessprocess" {
 		}
 		"--details" = {
 			set_if = "$icingacli_businessprocess_details$"
-			description = "Get details for root cause analyses"
+			description = "Get details for root cause analysis"
+		}
+		"--state-type" = {
+			value = "$icingacli_businessprocess_statetype$"
+			description = "Define which state type to look at. Could be either soft or hard, overrides an eventually configured default"
 		}
 		"--process" = {
 			value = "$icingacli_businessprocess_process$"
 			description = "Business process to monitor"
 			skip_key = true
 			required = true
+			order = -1
 		}
 	}
 
 	vars.icingacli_businessprocess_details = false
 }
+
