ITL: Add tempdir attribute to postgres CheckCommand
fixes #13449

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -495,6 +495,10 @@ object CheckCommand "postgres" {
 			set_if = "$postgres_reverse$"
 			description = "reverses warning and critical for custom_query action"
 		}
+		"--tempdir" = {
+			value = "$postgres_tempdir$"
+			description = "specify directory for temporary files. default depends on the OS"
+		}
 	}
 
 	vars.postgres_host = "$check_address$"
