Adding -A to snmp interfaces check
Already supported by underlying plugin, just not enabled in this config file by default
I've already enabled this on our installation, but figured I would push upstream

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -193,6 +193,9 @@ object CheckCommand "snmp-interface" {
 		"-N" = {
 			set_if = "$snmp_interface_ifname$"
 		}
+		"-A" = {
+			set_if = "$snmp_interface_ifalias$"
+		}
 		"-f" = {
 			set_if = "$snmp_perf$"
 		}
@@ -210,6 +213,7 @@ object CheckCommand "snmp-interface" {
 	vars.snmp_interface_delta = 300
 	vars.snmp_interface_warncrit_percent = false
 	vars.snmp_interface_ifname = false
+	vars.snmp_interface_ifalias = false
 	vars.snmp_warn = "300,400"
 	vars.snmp_crit = "0,600"
 	vars.snmp_perf = true
