Implemented -i switch to snmp-interface command configuration. As for Interface Monitoring it is sometime needed to inverse the status (down -> OK, up -> NOT OK).
Can be configured via snmp_interface_inverse variable (boolean).

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -183,6 +183,10 @@ object CheckCommand "snmp-interface" {
 		"-e" = {
 			set_if = "$snmp_interface_errors$"
 		}
+		"-i" = {
+			set_if = "$snmp_interface_inverse$"
+		}
+		"-r" = {
 		"-r" = {
 			set_if = "$snmp_interface_noregexp$"
 		}
