Add wrap output in HTML link parameter for http CheckCommand
fixes #120

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -457,6 +457,10 @@ object CheckCommand "http" {
 			set_if = "$http_ipv6$"
 			description = "Use IPv6 connection"
 		}
+		"-L" = {
+			set_if = "$http_link$"
+			description = "Wrap output in HTML link"
+		}
 		"-v" = {
 			set_if = "$http_verbose$"
 			description = "Show details for command-line debugging"
@@ -470,6 +474,7 @@ object CheckCommand "http" {
 	vars.http_invertregex = false
 	vars.check_ipv4 = "$http_ipv4$"
 	vars.check_ipv6 = "$http_ipv6$"
+	vars.http_link = false
 	vars.http_verbose = false
 }
 
