Add --perf-syntax option to check_perfmon
fixes #4896

--- a/itl/command-plugins-windows.conf
+++ b/itl/command-plugins-windows.conf
@@ -129,6 +129,11 @@ object CheckCommand "perfmon-windows" {
 			value = "$perfmon_win_type$"
 			description = "Performance counter type"
 		}
+		"--perf-syntax" = {
+			value = "$perfmon_win_syntax$"
+			description = "Use this instead of the counter name in the perfomance data"
+		}
+
 	}
 	
 	vars.performance_win_wait = 1000
