Update: ITL: IPMI
Add "verbose" options
Add "Limit SEL entries"
Add "Limit SEL entries" based on type
Add "Exclude sel" based on Type
  (Based on Version Version 3.12 check_ipmi_sensor)

--- a/itl/plugins-contrib.d/ipmi.conf
+++ b/itl/plugins-contrib.d/ipmi.conf
@@ -51,13 +51,29 @@ object CheckCommand "ipmi-sensor" {
 			value = "$ipmi_sensor_type$"
 			description = "Limit sensors to query based on IPMI sensor type (seperated by comma)"
 		}
+		"-ST" = {
+			set_if = "$ipmi_sel_type$"
+			description = "Limit SEL entries to specific types. (seperated by comma)"
+		}
 		"-x" = {
 			value = "$ipmi_exclude_sensor_id$"
 			description = "Exclude sensor matching ipmi_sensor_id"
 		}
+		"-xT" = {
+			set_if = "$ipmi_exclude_sensor$"
+			description = "Exclude sensors based on IPMI sensor type. (seperated by comma)"
+		}
+		"-xST" = {
+			set_if = "$ipmi_exclude_sel$"
+			description = "Exclude SEL entries of specific sensor types. (seperated by comma)"
+		}
 		"-i" = {
 			value = "$ipmi_sensor_id$"
 			description = "Include sensor matching ipmi_sensor_id"
+		}
+		"--nosel" = {
+			set_if = "$ipmi_no_sel_checking$"
+			description = "Turn off system event log checking via ipmi-sel"
 		}
 		"-D" = {
 			value = "$ipmi_protocal_lan_version$"
@@ -71,9 +87,17 @@ object CheckCommand "ipmi-sensor" {
 			set_if = "$ipmi_show_fru$"
 			description = "Print the product serial number got by ipmi-fru"
 		}
-		"--nosel" = {
-			set_if = "$ipmi_no_sel_checking$"
-			description = "Turn off system event log checking via ipmi-sel"
+		"--noentityabsent" = {
+			set_if = "$ipmi_noentityabsent$"
+			description = "Skip sensor checks for sensors that have 'noentityabsent' as event state"
+		}
+		"-vv" = {
+			set_if = "$ipmi_verbose$"
+			description = "Be Verbose multi line output, also with additional details for warnings"
+		}
+		"-vvv" = {
+			set_if = "$ipmi_debug$"
+			description = "Be Verbose debugging output, followed by normal multi line output"
 		}
 	}
 
