Add "-N" parameter for the "ssl" check command
Without this, we check the wrong cert when SNI is used:

./check_tcp -H git.netsandbox.de -p 443 -D 30,10
OK - Certificate 'netsandbox.de' will expire on 2017-04-19 12:01
+0200/CEST.

./check_tcp -H git.netsandbox.de -p 443 -D 30,10 -N git.netsandbox.de
OK - Certificate 'git.netsandbox.de' will expire on 2017-04-15 14:06
+0200/CEST.

fixes #4936

Signed-off-by: Gunnar Beutner <gunnar.beutner@icinga.com>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -269,9 +269,11 @@ object CheckCommand "ssl" {
 		"--ssl" = { }
 		"--timeout" = "$ssl_timeout$"
 		"-D" = "$ssl_cert_valid_days_warn$,$ssl_cert_valid_days_critical$"
+		"-N" = "$ssl_sni$"
 	}
 
 	vars.ssl_address = "$check_address$"
+	vars.ssl_sni = "$ssl_address$"
 }
 
 object CheckCommand "udp" {
