Review LogstashWriter feature implementation
refs #4054

--- a/etc/icinga2/features-available/logstash.conf
+++ b/etc/icinga2/features-available/logstash.conf
@@ -8,6 +8,5 @@ library "perfdata"
 object LogstashWriter "logstash" {
   //host = "127.0.0.1"
   //port = 9201
-  /* default is tcp */
-  //defaultProtocol = true
+  //socket_type = "udp"
 }
