ITL: Add report option to shorten output in oracle_health CheckCommand
fixes #4963
fixes #4661

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -400,6 +400,10 @@ object CheckCommand "oracle_health" {
 			value = "$oracle_health_timeout$"
 			description = "plugin timeout. Default is 60 seconds"
 		}
+		"--report" = {
+			value = "$oracle_health_report$"
+			description = "select the plugin output format. Can be short, long or html. Default is long"
+		}
 	}
 
 	env = {
@@ -411,6 +415,7 @@ object CheckCommand "oracle_health" {
 	vars.oracle_health_ident = false
 	vars.oracle_health_commit = false
 	vars.oracle_health_noperfdata = false
+	vars.oracle_health_report = "long"
 
 	vars.oracle_home = "/usr/lib/oracle/11.2/client64/lib"
 	vars.oracle_tns_admin = SysconfDir + "/icinga2/plugin-configs"
