ITL: check_icmp: add missing TTL attribute
fixes #4964

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1778,6 +1778,7 @@ object CheckCommand "icmp" {
 		"-m" = "$icmp_hosts_alive$"
 		"-b" = "$icmp_data_bytes$"
 		"-t" = "$icmp_timeout$"
+		"-l" = "$icmp_ttl$"
 	}
 
 	vars.icmp_address = "$address$"
