--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1776,6 +1776,7 @@ object CheckCommand "icmp" {
 		"-m" = "$icmp_hosts_alive$"
 		"-b" = "$icmp_data_bytes$"
 		"-t" = "$icmp_timeout$"
+		"-l" = "$icmp_ttl$"
 	}
 
 	vars.icmp_address = "$address$"
