--- a/itl/plugins-contrib.d/hardware.conf
+++ b/itl/plugins-contrib.d/hardware.conf
@@ -25,8 +25,8 @@ object CheckCommand "hpasm" {
 	arguments = {
 		"--hostname" = {
 			value = "$hpasm_hostname$"
+			set_if = "$hpasm_remote$"
 			description = "Hostname or IP-address of the server (SNMP mode only)"
-			required = true
 		}
 		"--community" = {
 			value = "$hpasm_community$"
@@ -93,6 +93,6 @@ object CheckCommand "hpasm" {
 			description = "Check network interfaces (and groups). Try it and report me whyt you think about it. I need to build up some know how on this subject. If get an error and you think, it is not justified for your configuration, please tell me about it. (alwasy send the output of \"snmpwalk -On .... 1.3.6.1.4.1.232\" and a description how you setup your nics and why it is correct opposed to the plugins error message"
 		}
 	}
-
+	vars.hpasm_remote = true
 	vars.hpasm_hostname = "$check_address$"
 }
