Plugin directory modified

--- a/itl/plugins-contrib.d/ipmi.conf
+++ b/itl/plugins-contrib.d/ipmi.conf
@@ -111,7 +111,7 @@ object CheckCommand "ipmi-sensor" {
 
 object CheckCommand "ipmi-alive" {
         import "plugin-check-command"
-        command = [ PluginContribDir + "/check_ping" ]
+        command = [ PluginDir + "/check_ping" ]
         arguments = {
                 "-H" = "$ipmi_address$"
                 "-w" = "5000,100%"
