Configurable path for the smart config file added

--- a/itl/plugins-contrib.d/smart-attributes.conf
+++ b/itl/plugins-contrib.d/smart-attributes.conf
@@ -6,10 +6,15 @@ object CheckCommand "smart-attributes" {
    import "plugin-check-command"
    command = [ PluginDir + "/check_smart_attributes" ]
    arguments = {
-   "-dbj" = "/etc/nagios-plugins/config/check_smartdb.json"
+   "-dbj" = {
+	required = true
+	value = "$smart_attributes_config_path$"
+	description = "Path to the smart attributes config file (e.g. check_smartdb.json)"
+	}
    "-d" = {
-         required = true
-         value = "$device$"
-      }
+	required = true
+	value = "$smart_attributes_device$"
+	description = "Insert the device name (e.g. /dev/sda) to monitor"
+	}
    }
 }
