Support --only-critical for check_apt

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1474,6 +1474,10 @@ object CheckCommand "apt" {
 			value = "$apt_timeout$"
 			description = "Seconds before plugin times out (default: 10)."
 		}
+		"--only-critical" = {
+			set_if = "$apt_only_critical$"
+			description = "Only warn about critical upgrades."
+		}
 	}
 
 	timeout = 5m
