ITL - Fix for nwc_health_report which should be a value

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -604,7 +604,7 @@ object CheckCommand "nwc_health" {
 			description = "The role of this device in a hsrp group (active/standby/listen)"
 		}
 		"--report" = {
-			set_if = "$nwc_health_report$"
+			value = "$nwc_health_report$"
 			description = "Can be used to shorten the output"
 		}
 		"--lookback" = {
