ITL: nwc_health_report attribute requires a value
fixes #5015

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -608,8 +608,8 @@ object CheckCommand "nwc_health" {
 			description = "The role of this device in a hsrp group (active/standby/listen)"
 		}
 		"--report" = {
-			set_if = "$nwc_health_report$"
-			description = "Can be used to shorten the output"
+			value = "$nwc_health_report$"
+			description = "Can be used to shorten the output. Possible values are: 'long' (default), 'short' (to shorten if available), or 'html' (to produce some html outputs if available)"
 		}
 		"--lookback" = {
 			value = "$nwc_health_lookback$"
