--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1110,7 +1110,7 @@ object CheckCommand "disk" {
 	vars.disk_wfree = "20%"
 	vars.disk_cfree = "10%"
 	vars.disk_megabytes = true
-	vars.disk_exclude_type = [ "none", "tmpfs", "sysfs", "proc", "devtmpfs", "devfs", "mtmfs", "tracefs", "cgroup", "fuse.gvfsd-fuse", "fdescfs" ]
+	vars.disk_exclude_type = [ "none", "tmpfs", "sysfs", "proc", "devtmpfs", "devfs", "mtmfs", "tracefs", "cgroup", "fuse.gvfsd-fuse", "fuse.gvfs-fuse-daemon", "fdescfs" ]
 }
 
 object CheckCommand "disk_smb" {
