add an IPMI Interface PING check for an IPMI host

--- a/itl/plugins-contrib.d/ipmi.conf
+++ b/itl/plugins-contrib.d/ipmi.conf
@@ -104,3 +104,20 @@ object CheckCommand "ipmi-sensor" {
 	vars.ipmi_address = "$check_address$"
 	vars.ipmi_protocal_lan_version = "LAN_2_0"
 }
+
+/*
+ * Icinga2 CheckCommand definition for an IPMI interface ping check
+*/
+
+object CheckCommand "ipmi-alive" {
+	import "plugin-check-command"
+
+	command = [ PluginDir + "/check_ping" ]
+
+	arguments = {
+		"-H" = "$ipmi_address$"
+		"-w" = "5000,100%"
+		"-c" = "5000,100%"
+		"-p" = "1"
+	}
+}
