--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -605,7 +605,7 @@ object CheckCommand "nwc_health" {
 		}
 		"--report" = {
 			value = "$nwc_health_report$"
-			description = "Can be used to shorten the output"
+			description = "Can be used to shorten the output. Possible values are: 'long' (default), 'short' (to shorten if available), or 'html' (to produce some html outputs if available)"
 		}
 		"--lookback" = {
 			value = "$nwc_health_lookback$"
