Add --if-names option to check_interfaces
Sinve version 1.3 check_interfaces supports an option to query ifName instead
of ifDescr, which is helpful eg. FortiOS 5.4 devices.

fixes #5028
fixes #5032

Signed-off-by: Gunnar Beutner <gunnar.beutner@icinga.com>

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -489,6 +489,10 @@ object CheckCommand "interfaces" {
 			value = "$interfaces_sleep$"
 			description = "Sleep between every SNMP query (in ms)."
 		}
+                "--if-names" = {
+                        set_if = "$interfaces_names$"
+                        description = "Use ifName instead of ifDescr."
+                }
 	}
 
 	vars.interfaces_address = "$check_address$"
