Add -q (query type) option for the dns check command
fixes #5047

Signed-off-by: Gunnar Beutner <gunnar.beutner@icinga.com>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1532,6 +1532,10 @@ object CheckCommand "dns" {
 			value = "$dns_server$"
 			description = "Optional DNS server you want to use for the lookup."
 		}
+		"-q" = {
+			value = "$dns_query_type$"
+			description = "Optional DNS record query type where TYPE =(A, AAAA, SRV, TXT, MX, ANY). The default query type is 'A' (IPv4 host entry)"
+		}
 		"-a" = {
 			value = "$dns_expected_answers$"
 			description = "Optional ip address or host you expect the DNS server to return. Host must end with a dot (.). This option can be repeated multiple times (Returns OK if any value match). If multiple addresses are returned at once, you have to match the whole string of addresses separated with commas (sorted alphabetically)."
@@ -1554,6 +1558,7 @@ object CheckCommand "dns" {
 	}
 
 	vars.dns_lookup = "$host.name$"
+	vars.dns_query_type = "A"
 	vars.dns_timeout = 10
 }
 
