Better error handling and fixes
refs #4991

--- a/etc/icinga2/features-available/redis.conf
+++ b/etc/icinga2/features-available/redis.conf
@@ -1,6 +1,8 @@
 /**
  * The redis library implements functionality for putting Icinga
  * event data into a redis database.
+ *
+ * NOTE: This is experimental and may change without further notice.
  */
 
 library "redis"
