ITL: Modify ipmi-alive CheckCommand to support arguments similar to hostalive
refs #5019

--- a/itl/plugins-contrib.d/ipmi.conf
+++ b/itl/plugins-contrib.d/ipmi.conf
@@ -109,15 +109,16 @@ object CheckCommand "ipmi-sensor" {
  * Icinga2 CheckCommand definition for an IPMI interface ping check
 */
 
+template CheckCommand "ipmi-alive-common" {
+	vars.ping_wrta = 5000.0
+	vars.ping_wpl = 100
+
+	vars.ping_crta = 5000.0
+	vars.ping_cpl = 100
+
+	vars.ping_packets = 1
+}
 object CheckCommand "ipmi-alive" {
-	import "plugin-check-command"
-
-	command = [ PluginDir + "/check_ping" ]
-
-	arguments = {
-		"-H" = "$ipmi_address$"
-		"-w" = "5000,100%"
-		"-c" = "5000,100%"
-		"-p" = "1"
-	}
+	import "ping"
+	import "ipmi-alive-common"
 }
