Add additional arguments to mssql_health

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -85,11 +85,25 @@ object CheckCommand "mssql_health" {
 			set_if = "$mssql_health_commit$"
 			description = "turns on autocommit for the dbd::sybase module"
 		}
+		"--notemp" = {
+			set_if = "$mssql_health_notemp$"
+			description = "Ignore temporary databases/tablespaces"
+		}
+		"--nooffline" = {
+			set_if = "$mssql_health_nooffline$"
+			description = "Skip the offline databases"
+		}
+		"--lookback" = {
+			value = "$mssql_health_lookback$"
+			description = "The amount of time you want to look back when calculating average rates"
+		}
 	}
 
 	vars.mssql_health_regexp = false
 	vars.mssql_health_offlineok = false
 	vars.mssql_health_commit = false
+	vars.mssql_health_notemp = false
+	vars.mssql_health_nooffline = false
 }
 
 object CheckCommand "mysql_health" {
