fix mitigation for nwc_health

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -632,7 +632,7 @@ object CheckCommand "nwc_health" {
 			description = "The extended critical thresholds"
 		}
 		"--mitigation" = {
-			set_if = "$nwc_health_mitigation$"
+			value = "$nwc_health_mitigation$"
 			description = "The parameter allows you to change a critical error to a warning."
 		}
 		"--selectedperfdata" = {
