ITL: Add support to NRPE v2 in NRPE CheckCommand
fixes #5126

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1755,6 +1755,10 @@ object CheckCommand "nrpe" {
 			set_if = "$nrpe_ipv6$"
 			description = "Use IPv6 connection"
 		}
+		"-2" = {
+			set_if = "$nrpe_version_2$"
+			description = "Use this if you want to connect to NRPE v2"
+		}
 	}
 
 	vars.nrpe_address = "$check_address$"
@@ -1762,7 +1766,7 @@ object CheckCommand "nrpe" {
 	vars.nrpe_timeout_unknown = false
 	vars.check_ipv4 = "$nrpe_ipv4$"
 	vars.check_ipv6 = "$nrpe_ipv6$"
-
+	vars.nrpe_version_2 = false
 	timeout = 5m
 }
 
