manubulon check_snmp_process add memory and cpu thresholds

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -93,7 +93,7 @@ object CheckCommand "snmp-load" {
 }
 
 
-/** 
+/**
  * Memory and swap usage on Linux given by Net-snmp
  *   Memory usage on cisco routers or Pix
  *   For other systems use check_snmp_storage.pl
@@ -149,7 +149,7 @@ object CheckCommand "snmp-storage" {
 }
 
 
-/** 
+/**
  * snmp network interfaces
  *   Url reference: http://nagios.manubulon.com/snmp_int.html
  */
@@ -223,7 +223,7 @@ object CheckCommand "snmp-interface" {
 }
 
 
-/** 
+/**
  * snmp process
  *   Url reference: http://nagios.manubulon.com/snmp_process.html
  */
@@ -244,6 +244,16 @@ object CheckCommand "snmp-process" {
 		"-A" = {
 			set_if = "$snmp_process_use_params$"
 		}
+		"-m" = {
+			description = "Checks memory usage. Values warning and critical in Mb eg. 512,1024"
+			set_if = "$snmp_process_mem_usage$"
+			value = "$snmp_process_mem_threshold$"
+		}
+		"-u" = {
+			description = "Checks CPU usage. Values warning and critical in % (value can be > 100% : 100%=1 CPU) eg. 15,50"
+			set_if = "$snmp_process_cpu_usage$"
+			value = "$snmp_process_cpu_threshold$"
+		}
 	}
 
 	vars.snmp_process_name = ".*"
@@ -251,5 +261,8 @@ object CheckCommand "snmp-process" {
 	vars.snmp_crit = 0
 	vars.snmp_perf = true
 	vars.snmp_process_use_params = false
+	vars.snmp_process_mem_usage = false
+	vars.snmp_process_mem_threshold = "0,0"
+	vars.snmp_process_cpu_usage = false
+	vars.snmp_process_cpu_threshold = "0,0"
 }
-
