Add check_ldap options
Adding the -W and -C (warning entries and critical entries) options

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1863,6 +1863,15 @@ object CheckCommand "ldap" {
 			value = "$ldap_critical$"
 			description = "Response time to result in critical status (seconds)"
 		}
+		
+		"-W" = {
+			value = "$ldap_warning_entries$"
+			description = "Number of found entries to result in warning status (optional)"
+		}
+		"-C" = {
+			value = "$ldap_critical_entries$"
+			description = "Number of found entries to result in critical status (optional)"
+		}
 		"-t" = {
 			value = "$ldap_timeout$"
 			description = "Seconds before connection times out (default: 10)"
