ITL: Add CheckCommand ssl_cert, fix ssl attributes

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -275,17 +275,40 @@ object CheckCommand "ssl" {
 	command = [ PluginDir + "/check_tcp" ]
 
 	arguments = {
-		"-H" = "$ssl_address$"
-		"-p" = "$ssl_port$"
+		"-H" = {
+			value = "$ssl_address$"
+			description = "Host address"
+		}
+		"-p" = {
+			value = "$ssl_port$"
+			description ="TCP port (default: 443)"
+		}
 		"--ssl" = { }
-		"--timeout" = "$ssl_timeout$"
-		"-D" = "$ssl_cert_valid_days_warn$,$ssl_cert_valid_days_critical$"
+		"-t" = {
+			value = "$ssl_timeout$"
+			description = "Seconds before connection times out (default: 10)"
+		}
+		"-D" = {{
+			var days_warn = macro("$ssl_cert_valid_days_warn$")
+			var days_critical = macro("$ssl_cert_valid_days_critical$")
+			if (days_warn) {
+				if (days_critical) {
+					return days_warn + "," + days_critical
+				} else {
+					return days_warn
+				}
+			}
+		}}
 		"-N" = "$ssl_sni$"
 	}
 
 	vars.ssl_address = "$check_address$"
+	vars.ssl_port = 443
+	vars.ssl_cert_valid_days_warn = false
+	vars.ssl_cert_valid_days_critical = false
 	vars.ssl_sni = "$ssl_address$"
 }
+
 
 object CheckCommand "udp" {
 	import "ipv4-or-ipv6"
