Add report mode to mssql_health

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -97,6 +97,10 @@ object CheckCommand "mssql_health" {
 			value = "$mssql_health_lookback$"
 			description = "The amount of time you want to look back when calculating average rates"
 		}
+		"--report" = {
+			value = "$mssql_health_report$"
+			description = "Report can be used to output only the bad news (short,long,html)"
+		}
 	}
 
 	vars.mssql_health_regexp = false
@@ -104,6 +108,7 @@ object CheckCommand "mssql_health" {
 	vars.mssql_health_commit = false
 	vars.mssql_health_notemp = false
 	vars.mssql_health_nooffline = false
+	vars.mssql_health_report = "short"
 }
 
 object CheckCommand "mysql_health" {
