--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -335,7 +335,10 @@ object CheckCommand "db2_health" {
                         value = "$db2_health_lookback$"
                         description = "How many days iin the past db2_health check should look back to calculate exitcode."
                 }
-
+                "--report" = {
+                        value = "$db2_health_report$"
+                        description = "Report can be used to output only the bad news (short,long,html)"
+                }
         }
 
         env = {
@@ -345,6 +348,7 @@ object CheckCommand "db2_health" {
 
         vars.db2_health_regexp = false
         vars.db2_health_hostname = "$check_address$"
+        vars.db2_health_report = "short"
 
         vars.db2_health_env_db2_home = "/opt/ibm/db2/V10.5"
         vars.db2_health_env_db2_version = "10.5"
