InfluxdbWriter: Use a work queue for async message processing; add stats log/api

--- a/etc/icinga2/features-available/influxdb.conf
+++ b/etc/icinga2/features-available/influxdb.conf
@@ -9,6 +9,8 @@ object InfluxdbWriter "influxdb" {
   //host = "127.0.0.1"
   //port = 8086
   //database = "icinga2"
+  //flush_threshold = 1024
+  //flush_interval = 10s
   //host_template = {
   //  measurement = "$host.check_command$"
   //  tags = {
