--- a/itl/plugins-contrib.d/vmware.conf
+++ b/itl/plugins-contrib.d/vmware.conf
@@ -887,6 +887,9 @@ object CheckCommand "vmware-esx-soap-host-storage-path" {
 		"--multiline" = {
 			set_if = "$vmware_multiline$"
 		}
+    "--standbyok" = {
+      set_if = "$vmware_standbyok$"
+    }
 	}
 }
 
